estructura inicial de la cabecera

--- a/articulo.html
+++ b/articulo.html
@@ -5,6 +5,9 @@
 	</head>
 	<body>
 		<div id="container">
+            <div id="cabecera">
+                cabecera
+            </div>
 			<div id="post">
 				<h1>Este es el título de mi atractivo post</h1>
 				<p>Y este es el parrafo del inicio. Donde voy a hablar de los últimos tres librps que leí: </p>
