--- a/articulo.html
+++ b/articulo.html
@@ -8,6 +8,7 @@
 			<div id="post">
 				<h1>Este es el título de mi atractivo post</h1>
 				<p>Y este es el parrafo del inicio. Donde voy a hablar de los últimos tres librps que leí: </p>
+				<p>Los blogs son la mejor forma de compartir información y tus ideas. Mucho mas que ir a conferencias o salir en YouTube. Excepto si eres un rockstar. Pero estadisticamente no lo eres...por ahora</p>
 			</div>
 		</div>
 	</body>
