--- a/articulo.html
+++ b/articulo.html
@@ -7,12 +7,13 @@
 		<div id="container">
             <div id="cabecera">
                 Hyperblog
-				<span id="tagline">Tu blog de confianza</span>
+				<span id="tagline">Tu blog de maestro</span>
             </div>
 			<div id="post">
 				<h1>Este es el título de mi atractivo post</h1>
 				<p>Y este es el parrafo del inicio. Donde voy a hablar de los últimos tres librps que leí: </p>
-				<p>Los blogs son la mejor forma de compartir información y tus ideas. Mucho mas que ir a conferencias o salir en YouTube. Excepto si eres un rockstar. Pero estadisticamente no lo eres...por ahora</p>
+				<p>Los blogs son la mejor forma de compartir información y tus ideas. Mucho mas que ir a conferencias o salir en YouTube. Excepto si eres un rockstar. Pero estadisticamente no lo eres...por ahora</p> 
+				<p>Suscritebete t dale like</p>
 			</div>
 		</div>
 	</body>
